# emojify

./: .gitignore  Cargo.toml  Dockerfile  README.md  cdk.context.json  cdk.json  package-lock.json  package.json  tsconfig.json
lib/: emojify.ts
lib/stacks/: dev-stack.ts  prod-stack.ts
src/: index.ts  lib.rs  main.rs
src/emojify/: discord-websocket-handler.ts  emojifier.ts  emojis.ts  package-lock.json  package.json  rest-handler.ts
src/emojify/models/: request-payload.ts
test/: emojify.test.ts
