[package]
name = "emojify"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
clap = { version = "4.5.50", features = ["derive"] }
emojis = "0.8.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full", "rt-multi-thread"] }
